--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "chat_cpp"]
 	path = chat_cpp
 	url = git@github.com:gaitovrat/chat_cpp.git
+[submodule "osy-gthreads"]
+	path = osy-gthreads
+	url = git@github.com:gaitovrat/osy-gthreads
